--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation 'com.google.android.material:material:1.2.0-alpha02'
+
+    implementation 'com.google.android.gms:play-services-ads:19.4.0'
+
 }
